Commented out unneeded content on index.html

--- a/CS360Website/index.html
+++ b/CS360Website/index.html
@@ -42,56 +42,58 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>UNDER MAINTAINENCE</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+										<!--<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
 										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>-->
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<!--<li><a href="generic.html" class="button">Learn More</a></li>-->
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
 							</section>
 
-						<!-- First Section -->
+						<!-- Resume -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Resume</h2>
 								</header>
 								<ul class="features">
-									<li>
+									<!--<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Ipsum consequat</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
+									</li>-->
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Work in Progress</h3>
+										<p>I know I should have some type of resume out already at this point in my CS career. 
+											Planning on putting one out this semester.
+										</p>
 									</li>
-									<li>
+									<!--<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Dolor nullam</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
+									</li>-->
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<!--<li><a href="generic.html" class="button">Learn More</a></li>-->
 									</ul>
 								</footer>
 							</section>
 
-						<!-- Second Section -->
+						<!-- Assignment 1 -->
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Assignment 1 - Data Exploration With Tableau</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<!--<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
+									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>-->
 								</header>
-								<ul class="statistics">
+								<!--<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
 										<strong>5,120</strong> This
@@ -112,8 +114,8 @@
 										<span class="icon fa-gem"></span>
 										<strong>1,024</strong> Later
 									</li>
-								</ul>
-								<p class="content">DESCRIBE MY DATA SET</p>
+								</ul>-->
+								<!--<p class="content">DESCRIBE MY DATA SET</p>-->
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="DATAVIS - ASS1.pdf" class="button primary">A1</a></li>
@@ -136,8 +138,8 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<!--<li><a href="generic.html" class="button primary">Get Started</a></li>
+										<li><a href="generic.html" class="button">Learn More</a></li>-->
 									</ul>
 								</footer>
 							</section>
@@ -145,7 +147,7 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!--<footer id="footer">
 						<section>
 							<h2>Aliquam sed mauris</h2>
 							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
@@ -172,7 +174,7 @@
 							</ul>
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+					</footer>-->
 
 			</div>
 
