--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Resume</a></li>
-							<li><a href="#second">Assignment 1</a></li>
+							<li><a href="#second">Assignments</a></li>
 							<li><a href="#cta">Links</a></li>
 						</ul>
 					</nav>
@@ -89,7 +89,7 @@
 						<!-- Assignment 1 -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Assignment 1 - Data Exploration With Tableau</h2>
+									<h2>Assignments</h2>
 									<!--<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>-->
 								</header>
@@ -119,6 +119,7 @@
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="DATAVIS - ASS1.pdf" class="button primary">A1</a></li>
+										<li><a href="https://vizhub.com/justinwong208/81032fd98705459b93d0409c456eb382" class="button primary">A2: Bar Graph</a></li>
 									</ul>
 								</footer>
 							</section>
