Added link of Dot Plot

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 									<ul class="actions special">
 										<li><a href="DATAVIS - ASS1.pdf" class="button primary">A1</a></li>
 										<li><a href="https://vizhub.com/justinwong208/81032fd98705459b93d0409c456eb382" class="button primary">A2: Bar Graph</a></li>
+										<li><a href="https://vizhub.com/justinwong208/b2992c196c2c4daf8ae97414a4d3f33a" class="button primary">A2: Dot Plot</a></li>
 									</ul>
 								</footer>
 							</section>
