--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 										<li><a href="https://vizhub.com/justinwong208/b2992c196c2c4daf8ae97414a4d3f33a" class="button primary">A2: Dot Plot</a></li>
 										<li><a href="https://vizhub.com/justinwong208/975f22dafb254193ab6d22494d32ac5b?edit=files" class="button primary">A3: Histogram</a></li>
 										<li><a href="https://vizhub.com/justinwong208/40071c5a2edb49df9ec3660920dfe1ce?file=index.html" class="button primary">A3: Box Plot</a></li>
+										<li><a href="https://vizhub.com/justinwong208/fa1394769ad64c3c8f206b10f188b9e3?edit=files" class="button primary">A4: Bar Graph in D3</a></li>
 									</ul>
 								</footer>
 							</section>
