--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 										<li><a href="https://vizhub.com/justinwong208/40071c5a2edb49df9ec3660920dfe1ce?file=index.html" class="button primary">A3: Box Plot</a></li>
 										<li><a href="https://vizhub.com/justinwong208/fa1394769ad64c3c8f206b10f188b9e3?edit=files" class="button primary">A4: Bar Graph in D3</a></li>
 										<li><a href="https://vizhub.com/justinwong208/fc7774ad1bf44cae91fa13fe0b2a04c6" class="button primary">A5: Bubble Chart</a></li>
-										<li><a href="https://vizhub.com/justinwong208/cacb9923f2f1461ab42d44e773d81917">A5: Line Chart</a></li>
-										<li><a href="https://vizhub.com/justinwong208/94d77c5de47e4c9d88c401495852b74c?edit=files&file=index.html">A6: Sequential Color Scale</a></li>
+										<li><a href="https://vizhub.com/justinwong208/cacb9923f2f1461ab42d44e773d81917" class="button primary">A5: Line Chart</a></li>
+										<li><a href="https://vizhub.com/justinwong208/94d77c5de47e4c9d88c401495852b74c?edit=files&file=index.html" class="button primary">A6: Sequential Color Scale</a></li>
 									</ul>
 								</footer>
 							</section>
