--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
 										<li><a href="https://vizhub.com/justinwong208/81032fd98705459b93d0409c456eb382" class="button primary">A2: Bar Graph</a></li>
 										<li><a href="https://vizhub.com/justinwong208/b2992c196c2c4daf8ae97414a4d3f33a" class="button primary">A2: Dot Plot</a></li>
 										<li><a href="https://vizhub.com/justinwong208/975f22dafb254193ab6d22494d32ac5b?edit=files" class="button primary">A3: Histogram</a></li>
+										
+									</ul>
+									<ul class="actions special">
 										<li><a href="https://vizhub.com/justinwong208/40071c5a2edb49df9ec3660920dfe1ce?file=index.html" class="button primary">A3: Box Plot</a></li>
 										<li><a href="https://vizhub.com/justinwong208/fa1394769ad64c3c8f206b10f188b9e3?edit=files" class="button primary">A4: Bar Graph in D3</a></li>
 										<li><a href="https://vizhub.com/justinwong208/fc7774ad1bf44cae91fa13fe0b2a04c6" class="button primary">A5: Bubble Chart</a></li>
