Made Project Website

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Resume</a></li>
 							<li><a href="#second">Assignments</a></li>
-							<li><a href="#cta">Links</a></li>
+							<li><a href="#finalP">Final Project</a></li>
+							<li><a href="#links">Links</a></li>
+
 						</ul>
 					</nav>
 
@@ -134,15 +136,14 @@
 								</footer>
 							</section>
 
-						<!-- Get Started -->
-							<section id="cta" class="main special">
+						<!-- Final Project -->
+							<section id="finalP" class="main special">
 								<header class="major">
-									<h2>My Frequently Visited Links</h2>
+									<h2>Final Project </h2>
 									<p>
 										<ul>
-											<l><a href="https://usfca.instructure.com" class="button">Canvas</a></l>
-											<l><a href="https://www.youtube.com" class="button">Youtube</a></l>
-											<l><a href="https://mail.google.com/mail/u/2/#inbox" class="button">Gmail</a></l>
+											<l><a href="project.html" class="button primary">Project Page</a></l>
+											
 
 										</ul>
 									</p>
@@ -154,6 +155,27 @@
 									</ul>
 								</footer>
 							</section>
+
+						<!-- Get Started -->
+						<section id="links" class="main special">
+							<header class="major">
+								<h2>My Frequently Visited Links</h2>
+								<p>
+									<ul>
+										<l><a href="https://usfca.instructure.com" class="button">Canvas</a></l>
+										<l><a href="https://www.youtube.com" class="button">Youtube</a></l>
+										<l><a href="https://mail.google.com/mail/u/2/#inbox" class="button">Gmail</a></l>
+
+									</ul>
+								</p>
+							</header>
+							<footer class="major">
+								<ul class="actions special">
+									<!--<li><a href="generic.html" class="button primary">Get Started</a></li>
+									<li><a href="generic.html" class="button">Learn More</a></li>-->
+								</ul>
+							</footer>
+						</section>
 
 					</div>
 
