Change sleep to travel

--- a/project.html
+++ b/project.html
@@ -3,6 +3,9 @@
 	Stellar by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+
+    DONT FORGET TO CREATE A NEW FOLDER AND ADD THIS HTML TO THE NEW FOLDER!!!!!!!!
 -->
 <html>
 	<head>
@@ -20,7 +23,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>SLEEP</h1>
+						<h1>Traveling During COVID</h1>
 						<p>Justin Wong - Data Visualization - CS360</p>
 					</header>
 
@@ -46,7 +49,7 @@
 										<header class="major">
 											<h2>SLEEP</h2>
 										</header>
-										<p>Some Description of my Sleep Project.</p>
+										<p>Some Description of my TRAVELING Project.</p>
 										<ul class="actions">
 											<!--<li><a href="generic.html" class="button">Learn More</a></li>-->
 										</ul>
