--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
 										<li><a href="https://vizhub.com/justinwong208/cacb9923f2f1461ab42d44e773d81917" class="button primary">A5: Line Chart</a></li>
 										<li><a href="https://vizhub.com/justinwong208/94d77c5de47e4c9d88c401495852b74c?edit=files&file=index.html" class="button primary">A6: Sequential Color Scale</a></li>
 									</ul>
+									<ul class="actions special">
+										<li><a href="https://vizhub.com/justinwong208/921e8723c6eb453ba1e7d7fcb682847e" class="button primary">A7: Force Directed Graph</a></li>
+										
+									</ul>
 								</footer>
 							</section>
 
