--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 									</ul>
 									<ul class="actions special">
 										<li><a href="https://vizhub.com/justinwong208/921e8723c6eb453ba1e7d7fcb682847e" class="button primary">A7: Force Directed Graph</a></li>
-										
+										<li><a href="https://vizhub.com/justinwong208/f233cc774b9e497787323ef41a302e52" class="button primary">A8: Interactivity</a></li>
 									</ul>
 								</footer>
 							</section>
