Added link to both OB1/OB2 Vis

--- a/project.html
+++ b/project.html
@@ -47,10 +47,13 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>SLEEP</h2>
+											<h2>Traveling</h2>
 										</header>
 										<p>Some Description of my TRAVELING Project.</p>
 										<ul class="actions">
+											<li><a href="https://vizhub.com/justinwong208/40071c5a2edb49df9ec3660920dfe1ce?file=index.html" class="button primary">Alpha</a></li>
+											<l><a href="chloro/index.html" class="button primary">Chloropleth</a></l>
+											<l><a href="cleveland/index.html" class="button primary">Cleveland</a></l>
 											<!--<li><a href="generic.html" class="button">Learn More</a></li>-->
 										</ul>
 									</div>
