Added Alpha Pdf

--- a/project.html
+++ b/project.html
@@ -33,7 +33,7 @@
 							<li><a href="#intro" class="active">Description</a></li>
 							<li><a href="#first">Resume</a></li>
 							<li><a href="#second">Assignments</a></li>
-							<li><a href="#finalP">Final Project</a></li>
+							<li><a href="#finalP">Visualizations</a></li>
 							<li><a href="#links">Links</a></li>
 
 						</ul>
@@ -50,10 +50,9 @@
 											<h2>Traveling</h2>
 										</header>
 										<p>Some Description of my TRAVELING Project.</p>
+										<p>Link Below opens Alpha pdf (Located at the bottom of pdf)</p>
 										<ul class="actions">
-											<li><a href="https://vizhub.com/justinwong208/40071c5a2edb49df9ec3660920dfe1ce?file=index.html" class="button primary">Alpha</a></li>
-											<l><a href="chloro/index.html" class="button primary">Chloropleth</a></l>
-											<l><a href="cleveland/index.html" class="button primary">Cleveland</a></l>
+											<li><a href="AlphaReport.pdf" class="button primary">Alpha</a></li>
 											<!--<li><a href="generic.html" class="button">Learn More</a></li>-->
 										</ul>
 									</div>
@@ -143,10 +142,11 @@
 						<!-- Final Project -->
 							<section id="finalP" class="main special">
 								<header class="major">
-									<h2>Final Project </h2>
+									<h2>Visualizations</h2>
 									<p>
 										<ul>
-											<l><a href="https://usfca.instructure.com" class="button primary">Canvas</a></l>
+											<l><a href="chloro/index.html" class="button primary">Chloropleth</a></l>
+											<l><a href="cleveland/index.html" class="button primary">Cleveland</a></l>
 											
 
 										</ul>
