Added two links for A9

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
 									<ul class="actions special">
 										<li><a href="https://vizhub.com/justinwong208/921e8723c6eb453ba1e7d7fcb682847e" class="button primary">A7: Force Directed Graph</a></li>
 										<li><a href="https://vizhub.com/justinwong208/f233cc774b9e497787323ef41a302e52" class="button primary">A8: Interactivity</a></li>
+										<li><a href="https://vizhub.com/justinwong208/0248fc8415724460bbb0cd92c77223bc" class="button primary">A9: Choropleth</a></li>
+										<li><a href="https://vizhub.com/justinwong208/3ef8ff10c1e04680a9570dbedcdaeb4c?edit=files" class="button primary">A9: Proportional Symbol Graph</a></li>
 									</ul>
 								</footer>
 							</section>
