Wanted to hide final thoughts

--- a/project.html
+++ b/project.html
@@ -160,7 +160,7 @@
 <!-- Final Thoughts -->
 						<section id="links" class="main special">
 							<header class="major">
-								<h2>Final Thoughts</h2>
+								<!-- <h2>Final Thoughts</h2> -->
 								
 								
 							</header>
