--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
 										<li><a href="https://vizhub.com/justinwong208/0248fc8415724460bbb0cd92c77223bc" class="button primary">A9: Choropleth</a></li>
 										<li><a href="https://vizhub.com/justinwong208/3ef8ff10c1e04680a9570dbedcdaeb4c?edit=files" class="button primary">A9: Proportional Symbol Graph</a></li>
 									</ul>
+									<ul class="actions special">
+										<li><a href="A10/indexgood.html" class="button primary">A10: White Hat / Black Hat</a></li>
+									</ul>
+									
 								</footer>
 							</section>
 
