Testing svgs on projecttesthtml

--- a/project.html
+++ b/project.html
@@ -108,9 +108,9 @@
 									the number of infected and Covid related deaths kept coming back in waves, at least in California, 
 									pushing back the full reopening of San Francisco to June 2021.
 									</h3>-->
-								<!-- <svg id="choro" width="800" height="800" ></svg>
+								<svg id="choro" width="800" height="800" ></svg>
 								 <script src="choro/choropleth.js"></script>
-								 -->
+								
 								<h5>The choropleth only shows data for the top ten countries based on their incoming international arrivals. 
 									Days with bans on high-risk regions, and full border closure are also included.</h5>
 								<ul class="features">
@@ -177,8 +177,8 @@
 								</p> -->
 							
 
-								<!-- <div id="smallmult"></div>
-								<script src="multiple/multiple.js"></script> -->
+								<div id="smallmult"></div>
+								<script src="multiple/multiple.js"></script>
 								</body>
 								<footer class="major">
 									<ul class="actions special">
