fixed visuals removed useless files

--- a/project_test.html
+++ b/project_test.html
@@ -33,17 +33,17 @@
 
 <body>
   <div>
-    <!-- <svg id="choro" width="800" height="800" ></svg>
-	 <script src="choro/choropleth.js"></script> -->
-    <svg id="cleve" width="800" height="800" ></svg>
-     <script src="cleveland/cleveland.js"></script>
+    <svg id="choro" width="800" height="800" ></svg>
+	 <script src="choro/choropleth.js"></script>
+    <!-- <svg id="cleve" width="800" height="800" ></svg>
+     <script src="cleveland/cleveland.js"></script> -->
     
 								
   </div>
   <div>
-     <!-- <div id="cleve"></div> -->
-     <!-- <svg id="cleve" width="800" height="800" ></svg>
-     <script src="cleveland/cleveland.js"></script> -->
+     <div id="cleve"></div>
+    <!-- <svg id="cleve" width="800" height="800" ></svg> -->
+  <script src="cleveland/cleveland.js"></script> 
 </div>
 <div>
     <div id="smallmult"></div>
